tests/negative/gold/prefixed_assign2_test.gold
tests/negative/prefixed_assign2_test.toit:6:6: error: Can't assign to unknown 'prefix'
  pa.prefix = 3
     ^~~~~~
Compilation failed.
